--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
-    "cookie-store": "^3.0.0",
+    "cookie-store": "^4.0.0-next.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
