--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "cookie-store": "^4.0.0-next.0",
+    "date-fns": "^2.29.2",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.6",
     "react-redux": "^8.0.2",
@@ -62,6 +65,8 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/react-big-calendar": "^0.38.1",
+    "@types/react-datetime-picker": "^3.4.1",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
