--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
     "@headlessui/react": "^1.6.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
@@ -23,7 +25,6 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.5.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.6",
@@ -32,6 +33,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
+    "sass": "^1.54.9",
     "serve": "^13.0.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
@@ -65,7 +67,6 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/react-big-calendar": "^0.38.1",
     "@types/react-datetime-picker": "^3.4.1",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
